feat(mobile): refonte menu mobile fullscreen avec accessibilité
- Overlay plein écran (100dvh) avec safe-area-inset
- Gestion touche ESC pour fermer
- Focus trap pour accessibilité clavier
- ARIA: role=dialog, aria-modal, aria-label
- Tap targets minimum 64px (guidelines iOS/Android)
- Animations staggered pour les items
- Scroll bloqué sur la page derrière
- Fermeture via: bouton X, overlay, ESC
- Traductions ajoutées (FR/EN/ES/PT-BR/AR)

--- a/src/i18n/locales/ar/common.json
+++ b/src/i18n/locales/ar/common.json
@@ -183,7 +183,8 @@
     "learnMore": "معرفة المزيد",
     "submit": "إرسال",
     "openMenu": "فتح القائمة الرئيسية",
-    "closeMenu": "إغلاق القائمة"
+    "closeMenu": "إغلاق القائمة",
+    "pressEscToClose": "اضغط ESC أو المس للإغلاق"
   },
   "clientArea": {
     "title": "مساحتي",
