feat(mobile): menu accordéon avec sections et CTA sticky
- Nouveau composant MobileMenuAccordion avec sections:
  - Accueil (lien direct)
  - L'entreprise (MPEB, EGI, FREM, MGP, Vision)
  - Services (Expertises, Avis clients, Plaquette)
  - Recrutement (Carrières, Offres, Candidature)
  - Blog (lien direct)
- Accordéons expand/collapse accessibles (aria-expanded)
- CTA sticky en bas: Contact + Devis
- Traductions ajoutées (FR/EN/ES/PT-BR/AR)
- Tap targets optimisés mobile (48-56px min)

--- a/src/i18n/locales/ar/common.json
+++ b/src/i18n/locales/ar/common.json
@@ -23,6 +23,19 @@
     "careers": "الوظائف",
     "quote": "طلب عرض أسعار"
   },
+  "mobileNav": {
+    "entreprise": "الشركة",
+    "services": "الخدمات",
+    "recrutement": "التوظيف",
+    "mpeb": "MPEB - التصنيع",
+    "egi": "EGI - الهندسة",
+    "frem": "FREM - الصيانة",
+    "mgp": "MGP - الصفائح المعدنية",
+    "brochure": "كتيب PDF",
+    "offres": "عروض العمل",
+    "candidature": "ترشيح عفوي",
+    "devis": "طلب عرض أسعار"
+  },
   "hero": {
     "chip": "تجمع هندسي",
     "headline": "LLEDO Industries",
