feat(mobile): audit complet - 100% des liens accessibles
- Ajout lien Aerotools dans section Services
- Traductions ajoutées (FR/EN/ES/PT-BR/AR)
- Audit: tous les liens publics sont maintenant accessibles

--- a/src/i18n/locales/en/common.json
+++ b/src/i18n/locales/en/common.json
@@ -31,6 +31,7 @@
     "egi": "EGI - Engineering",
     "frem": "FREM - Maintenance",
     "mgp": "MGP - Sheet Metal",
+    "aerotools": "Aerotools - GSE Products",
     "brochure": "PDF Brochure",
     "offres": "Job Offers",
     "candidature": "Spontaneous Application",
