--- a/src/i18n/locales/es/common.json
+++ b/src/i18n/locales/es/common.json
@@ -31,6 +31,7 @@
     "egi": "EGI - Ingeniería",
     "frem": "FREM - Mantenimiento",
     "mgp": "MGP - Calderería",
+    "aerotools": "Aerotools - Productos GSE",
     "brochure": "Catálogo PDF",
     "offres": "Ofertas de empleo",
     "candidature": "Candidatura espontánea",
