--- a/src/i18n/locales/fr/common.json
+++ b/src/i18n/locales/fr/common.json
@@ -31,6 +31,7 @@
     "egi": "EGI - Bureau d'études",
     "frem": "FREM - Maintenance",
     "mgp": "MGP - Tôlerie",
+    "aerotools": "Aerotools - Produits GSE",
     "brochure": "Plaquette PDF",
     "offres": "Offres d'emploi",
     "candidature": "Candidature spontanée",
