--- a/src/i18n/locales/pt-BR/common.json
+++ b/src/i18n/locales/pt-BR/common.json
@@ -31,6 +31,7 @@
     "egi": "EGI - Engenharia",
     "frem": "FREM - Manutenção",
     "mgp": "MGP - Caldeiraria",
+    "aerotools": "Aerotools - Produtos GSE",
     "brochure": "Catálogo PDF",
     "offres": "Vagas de emprego",
     "candidature": "Candidatura espontânea",
