--- a/src/i18n/locales/ar/common.json
+++ b/src/i18n/locales/ar/common.json
@@ -31,6 +31,7 @@
     "egi": "EGI - الهندسة",
     "frem": "FREM - الصيانة",
     "mgp": "MGP - الصفائح المعدنية",
+    "aerotools": "Aerotools - منتجات GSE",
     "brochure": "كتيب PDF",
     "offres": "عروض العمل",
     "candidature": "ترشيح عفوي",
