feat(auth): accès permanent à l'espace client (mobile + desktop)
ANALYSE AUTH:
- Système: next-auth v5 avec useSession()
- Source de vérité: session.user (id, email, role, firstName, lastName)

NAVBAR DESKTOP (déjà existant):
- Dropdown utilisateur avec: Mon profil, Dashboard (admin), Déconnexion
- Bouton Connexion si non connecté

MENU MOBILE (MobileMenuAccordion):
- Section compte utilisateur en haut si connecté
- Avatar avec initiales + nom + email + badge admin
- Liens: Dashboard (admin), Mon profil, Espace client, Déconnexion
- Bouton Connexion/Inscription si non connecté

ROUTE /account:
- Alias vers /espace-client/profil
- Redirige vers /connexion si non connecté (avec callbackUrl)

MIDDLEWARE (src/middleware.ts):
- Protection routes /espace-client/* et /account/*
- Protection routes /admin/* (rôle ADMIN requis)
- Redirection vers /connexion avec callbackUrl

TRADUCTIONS:
- Ajout auth.clientSpace (FR/EN/ES/PT-BR/AR)

--- a/src/i18n/locales/ar/common.json
+++ b/src/i18n/locales/ar/common.json
@@ -142,6 +142,7 @@
     "register": "التسجيل",
     "loginRegister": "تسجيل الدخول / التسجيل",
     "myProfile": "ملفي الشخصي",
+    "clientSpace": "مساحة العميل",
     "dashboard": "لوحة التحكم",
     "administrator": "مدير",
     "createAccount": "إنشاء حساب",
