--- a/src/i18n/locales/en/common.json
+++ b/src/i18n/locales/en/common.json
@@ -142,6 +142,7 @@
     "register": "Register",
     "loginRegister": "Login / Register",
     "myProfile": "My Profile",
+    "clientSpace": "Client Area",
     "dashboard": "Dashboard",
     "administrator": "Administrator",
     "createAccount": "Create Account",
