--- a/src/i18n/locales/es/common.json
+++ b/src/i18n/locales/es/common.json
@@ -142,6 +142,7 @@
     "register": "Registrarse",
     "loginRegister": "Iniciar sesión / Registrarse",
     "myProfile": "Mi perfil",
+    "clientSpace": "Área de cliente",
     "dashboard": "Panel de control",
     "administrator": "Administrador",
     "createAccount": "Crear cuenta",
