--- a/src/i18n/locales/fr/common.json
+++ b/src/i18n/locales/fr/common.json
@@ -142,6 +142,7 @@
     "register": "Inscription",
     "loginRegister": "Connexion / Inscription",
     "myProfile": "Mon profil",
+    "clientSpace": "Espace client",
     "dashboard": "Tableau de bord",
     "administrator": "Administrateur",
     "createAccount": "Créer un compte",
