--- a/src/i18n/locales/pt-BR/common.json
+++ b/src/i18n/locales/pt-BR/common.json
@@ -142,6 +142,7 @@
     "register": "Cadastrar",
     "loginRegister": "Entrar / Cadastrar",
     "myProfile": "Meu perfil",
+    "clientSpace": "Área do cliente",
     "dashboard": "Painel de controle",
     "administrator": "Administrador",
     "createAccount": "Criar conta",
