feat(pages): pages Coming Soon pour plaquette et boutique/aerotools avec animations helicopteres multilingues (FR/EN/ES/PT-BR/AR)

--- a/src/i18n/locales/ar/common.json
+++ b/src/i18n/locales/ar/common.json
@@ -305,5 +305,32 @@
       "madeInFrance": "صنع في فرنسا 🇫🇷",
       "copyright": "© {{year}} LLEDO Industries. جميع الحقوق محفوظة."
     }
+  },
+  "brochure": {
+    "pageTitle": "الكتيب - قريباً",
+    "pageDescription": "سيكون كتيب العرض التقديمي متاحًا للتنزيل قريبًا.",
+    "backHome": "العودة للرئيسية",
+    "title": "الكتيب",
+    "subtitle": "قريباً",
+    "description": "كتيب العرض التقديمي الكامل قيد الإنجاز. سيعرض جميع خبراتنا وشهاداتنا ومراجع عملائنا.",
+    "inProgress": "قيد التحضير...",
+    "notifyMe": "أبلغني",
+    "feature1": "صيغة PDF",
+    "feature2": "تحميل مجاني"
+  },
+  "aerotools": {
+    "pageTitle": "LLEDO Aerotools - قريباً",
+    "pageDescription": "LLEDO Aerotools، مجموعتنا من معدات GSE للطيران، ستتوفر قريبًا.",
+    "backToAerotools": "العودة إلى Aerotools",
+    "comingSoon": "قريباً",
+    "comingSoonDescription": "كتالوج معدات GSE (معدات الدعم الأرضي) للطيران قيد التطوير. قضبان السحب، بكرات المناولة والأدوات المتخصصة للمروحيات.",
+    "inDevelopment": "قيد التطوير",
+    "notifyMe": "أبلغني عند الإطلاق",
+    "feature1Title": "معدات GSE",
+    "feature1Desc": "قضبان سحب وأدوات معتمدة",
+    "feature2Title": "حسب الطلب",
+    "feature2Desc": "حلول مخصصة لطائراتك",
+    "feature3Title": "توصيل سريع",
+    "feature3Desc": "الشحن خلال 2-4 أسابيع"
   }
 }
