feat(mobile-nav): refactorisation navigation mobile - burger 32x32px, liens 18px, CTA sticky, footer optimise

--- a/src/i18n/locales/ar/common.json
+++ b/src/i18n/locales/ar/common.json
@@ -37,6 +37,11 @@
     "candidature": "ترشيح عفوي",
     "devis": "طلب عرض أسعار"
   },
+  "cta": {
+    "call": "اتصل",
+    "email": "بريد",
+    "quote": "عرض سعر"
+  },
   "hero": {
     "chip": "تجمع هندسي",
     "headline": "LLEDO Industries",
