--- a/src/i18n/locales/en/common.json
+++ b/src/i18n/locales/en/common.json
@@ -37,6 +37,11 @@
     "candidature": "Spontaneous Application",
     "devis": "Request a Quote"
   },
+  "cta": {
+    "call": "Call",
+    "email": "Email",
+    "quote": "Quote"
+  },
   "hero": {
     "chip": "Engineering Collective",
     "headline": "LLEDO Industries",
