--- a/src/i18n/locales/en/common.json
+++ b/src/i18n/locales/en/common.json
@@ -32,6 +32,7 @@
     "frem": "FREM - Maintenance",
     "mgp": "MGP - Sheet Metal",
     "aerotools": "Aerotools - GSE Products",
+    "outillage": "Tooling Manufacturing & Integration",
     "brochure": "PDF Brochure",
     "offres": "Job Offers",
     "candidature": "Spontaneous Application",
@@ -264,7 +265,8 @@
     "ce": "CE Marking",
     "iso9001": "ISO 9001:2015",
     "en9100": "EN 9100",
-    "en12312": "EN 12312-1"
+    "en12312": "EN 12312-1",
+    "interchangeability": "Interchangeability"
   },
   "footer": {
     "company": {
