--- a/src/i18n/locales/es/common.json
+++ b/src/i18n/locales/es/common.json
@@ -32,6 +32,7 @@
     "frem": "FREM - Mantenimiento",
     "mgp": "MGP - Calderería",
     "aerotools": "Aerotools - Productos GSE",
+    "outillage": "Fabricación de utillaje e Integración",
     "brochure": "Catálogo PDF",
     "offres": "Ofertas de empleo",
     "candidature": "Candidatura espontánea",
@@ -264,7 +265,8 @@
     "ce": "Marcado CE",
     "iso9001": "ISO 9001:2015",
     "en9100": "EN 9100",
-    "en12312": "EN 12312-1"
+    "en12312": "EN 12312-1",
+    "interchangeability": "Intercambiabilidad"
   },
   "footer": {
     "company": {
