refactor(features): section Pourquoi Nous Choisir - usinage 3-5 axes, suivi numerique temps reel, equipe experte enrichie, traductions 6 langues

--- a/src/i18n/locales/ar/common.json
+++ b/src/i18n/locales/ar/common.json
@@ -92,19 +92,19 @@
         "benefits": ["قابلية تبادل المكونات", "تتبع كامل", "شهادات صناعية"]
       },
       {
-        "title": "التصنيع الدقيق",
-        "description": "تصنيع دقيق من 3 إلى 5 محاور وتركيب القطع الميكانيكية وفقاً لمواصفات العميل.",
-        "benefits": ["تصنيع من 3 إلى 5 محاور", "مراقبة الجودة", "خبرة تقنية"]
+        "title": "التصنيع الدقيق من 3 إلى 5 محاور",
+        "description": "تصنيع دقيق متعدد المحاور وتركيب القطع الميكانيكية وفقاً لأكثر مواصفات العميل تطلباً.",
+        "benefits": ["تصنيع 3 و4 و5 محاور", "مراقبة الجودة الأبعادية", "خبرة تقنية معتمدة"]
       },
       {
         "title": "الالتزام بالمواعيد",
-        "description": "الالتزام بالمواعيد المتفق عليها بفضل تنظيمنا المحسّن وقدرتنا الإنتاجية.",
-        "benefits": ["متابعة رقمية للمشاريع", "تخطيط دقيق", "إدارة العمليات"]
+        "description": "الالتزام بالمواعيد المتفق عليها بفضل تنظيمنا المحسّن وقدرتنا الإنتاجية والمتابعة الرقمية في الوقت الفعلي.",
+        "benefits": ["متابعة رقمية في الوقت الفعلي", "إدارة مرنة واستباق المراحل", "إدارة العمليات"]
       },
       {
         "title": "فريق خبير",
-        "description": "متخصصون في تصنيع القطع الأساسية والأدوات والآلات الخاصة.",
-        "benefits": ["تصنيع القطع الأساسية", "الأدوات الصناعية", "الآلات الخاصة"]
+        "description": "متخصصون في تصنيع القطع الأساسية والأدوات المخصصة والآلات الخاصة لصناعة الطيران والدفاع.",
+        "benefits": ["تصنيع القطع الأساسية", "أدوات صناعية مخصصة", "الآلات الخاصة"]
       },
       {
         "title": "الابتكار المستمر",
