--- a/src/i18n/locales/en/common.json
+++ b/src/i18n/locales/en/common.json
@@ -92,19 +92,19 @@
         "benefits": ["Component interchangeability", "Full traceability", "Industrial certifications"]
       },
       {
-        "title": "Precision Machining",
-        "description": "3 to 5-axis precision machining and mechanical part fitting according to client specifications.",
-        "benefits": ["3 to 5-axis machining", "Quality control", "Technical expertise"]
+        "title": "3 to 5-Axis Precision Machining",
+        "description": "Multi-axis precision machining and mechanical part fitting to the most demanding client specifications.",
+        "benefits": ["3, 4 and 5-axis machining", "Dimensional quality control", "Certified technical expertise"]
       },
       {
         "title": "On-Time Delivery",
-        "description": "Meeting agreed deadlines through optimized organization and production capacity.",
-        "benefits": ["Digital project tracking", "Rigorous planning", "Operations management"]
+        "description": "Meeting agreed deadlines through optimized organization, production capacity and real-time digital tracking.",
+        "benefits": ["Real-time digital tracking", "Agile management and milestone anticipation", "Operations management"]
       },
       {
         "title": "Expert Team",
-        "description": "Specialists in elementary part manufacturing, tooling and special machinery.",
-        "benefits": ["Elementary part manufacturing", "Industrial tooling", "Special machinery"]
+        "description": "Specialists in elementary part manufacturing, custom tooling and special machinery for the aerospace and defense industries.",
+        "benefits": ["Elementary part manufacturing", "Custom industrial tooling", "Special machinery"]
       },
       {
         "title": "Continuous Innovation",
