--- a/src/i18n/locales/ar/common.json
+++ b/src/i18n/locales/ar/common.json
@@ -32,16 +32,10 @@
     "frem": "FREM - الصيانة",
     "mgp": "MGP - الصفائح المعدنية",
     "aerotools": "Aerotools - منتجات GSE",
-    "outillage": "تصنيع الأدوات والتكامل",
     "brochure": "كتيب PDF",
     "offres": "عروض العمل",
     "candidature": "ترشيح عفوي",
     "devis": "طلب عرض أسعار"
-  },
-  "cta": {
-    "call": "اتصل",
-    "email": "بريد",
-    "quote": "عرض سعر"
   },
   "hero": {
     "chip": "تجمع هندسي",
@@ -92,19 +86,19 @@
         "benefits": ["قابلية تبادل المكونات", "تتبع كامل", "شهادات صناعية"]
       },
       {
-        "title": "التصنيع الدقيق من 3 إلى 5 محاور",
-        "description": "تصنيع دقيق متعدد المحاور وتركيب القطع الميكانيكية وفقاً لأكثر مواصفات العميل تطلباً.",
-        "benefits": ["تصنيع 3 و4 و5 محاور", "مراقبة الجودة الأبعادية", "خبرة تقنية معتمدة"]
+        "title": "التصنيع الدقيق",
+        "description": "تصنيع دقيق من 3 إلى 5 محاور وتركيب القطع الميكانيكية وفقاً لمواصفات العميل.",
+        "benefits": ["تصنيع من 3 إلى 5 محاور", "مراقبة الجودة", "خبرة تقنية"]
       },
       {
         "title": "الالتزام بالمواعيد",
-        "description": "الالتزام بالمواعيد المتفق عليها بفضل تنظيمنا المحسّن وقدرتنا الإنتاجية والمتابعة الرقمية في الوقت الفعلي.",
-        "benefits": ["متابعة رقمية في الوقت الفعلي", "إدارة مرنة واستباق المراحل", "إدارة العمليات"]
+        "description": "الالتزام بالمواعيد المتفق عليها بفضل تنظيمنا المحسّن وقدرتنا الإنتاجية.",
+        "benefits": ["متابعة رقمية للمشاريع", "تخطيط دقيق", "إدارة العمليات"]
       },
       {
         "title": "فريق خبير",
-        "description": "متخصصون في تصنيع القطع الأساسية والأدوات المخصصة والآلات الخاصة لصناعة الطيران والدفاع.",
-        "benefits": ["تصنيع القطع الأساسية", "أدوات صناعية مخصصة", "الآلات الخاصة"]
+        "description": "متخصصون في تصنيع القطع الأساسية والأدوات والآلات الخاصة.",
+        "benefits": ["تصنيع القطع الأساسية", "الأدوات الصناعية", "الآلات الخاصة"]
       },
       {
         "title": "الابتكار المستمر",
@@ -265,8 +259,7 @@
     "ce": "علامة CE",
     "iso9001": "ISO 9001:2015",
     "en9100": "EN 9100",
-    "en12312": "EN 12312-1",
-    "interchangeability": "قابلية التبادل"
+    "en12312": "EN 12312-1"
   },
   "footer": {
     "company": {
