--- a/src/i18n/locales/en/common.json
+++ b/src/i18n/locales/en/common.json
@@ -32,16 +32,10 @@
     "frem": "FREM - Maintenance",
     "mgp": "MGP - Sheet Metal",
     "aerotools": "Aerotools - GSE Products",
-    "outillage": "Tooling Manufacturing & Integration",
     "brochure": "PDF Brochure",
     "offres": "Job Offers",
     "candidature": "Spontaneous Application",
     "devis": "Request a Quote"
-  },
-  "cta": {
-    "call": "Call",
-    "email": "Email",
-    "quote": "Quote"
   },
   "hero": {
     "chip": "Engineering Collective",
@@ -92,19 +86,19 @@
         "benefits": ["Component interchangeability", "Full traceability", "Industrial certifications"]
       },
       {
-        "title": "3 to 5-Axis Precision Machining",
-        "description": "Multi-axis precision machining and mechanical part fitting to the most demanding client specifications.",
-        "benefits": ["3, 4 and 5-axis machining", "Dimensional quality control", "Certified technical expertise"]
+        "title": "Precision Machining",
+        "description": "3 to 5-axis precision machining and mechanical part fitting according to client specifications.",
+        "benefits": ["3 to 5-axis machining", "Quality control", "Technical expertise"]
       },
       {
         "title": "On-Time Delivery",
-        "description": "Meeting agreed deadlines through optimized organization, production capacity and real-time digital tracking.",
-        "benefits": ["Real-time digital tracking", "Agile management and milestone anticipation", "Operations management"]
+        "description": "Meeting agreed deadlines through optimized organization and production capacity.",
+        "benefits": ["Digital project tracking", "Rigorous planning", "Operations management"]
       },
       {
         "title": "Expert Team",
-        "description": "Specialists in elementary part manufacturing, custom tooling and special machinery for the aerospace and defense industries.",
-        "benefits": ["Elementary part manufacturing", "Custom industrial tooling", "Special machinery"]
+        "description": "Specialists in elementary part manufacturing, tooling and special machinery.",
+        "benefits": ["Elementary part manufacturing", "Industrial tooling", "Special machinery"]
       },
       {
         "title": "Continuous Innovation",
@@ -265,8 +259,7 @@
     "ce": "CE Marking",
     "iso9001": "ISO 9001:2015",
     "en9100": "EN 9100",
-    "en12312": "EN 12312-1",
-    "interchangeability": "Interchangeability"
+    "en12312": "EN 12312-1"
   },
   "footer": {
     "company": {
